--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,6 +40,10 @@ jobs:
               id: name
               run: echo 'name=${{ github.ref_name }}' | awk '{sub(/docker/, "anscor"); print $0}' >> $GITHUB_OUTPUT
 
+            - name: Echo inputs
+              id: input
+              run: echo "${{ inputs.repo }}"
+
             - name: Login to DockerHub
               uses: docker/login-action@v3
               with:
