--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,7 +42,7 @@ jobs:
 
             - name: Echo inputs
               id: input
-              run: echo "${{ inputs.repo }}"
+              run: echo "${{ github.event.inputs.repo }}"
 
             - name: Login to DockerHub
               uses: docker/login-action@v3
@@ -56,7 +56,7 @@ jobs:
                   platforms: linux/amd64
                   push: true
                   build-args: |
-                      REPO_URL="${{ inputs.repo }}"
+                      REPO_URL="${{ github.event.inputs.repo }}"
                   tags: |
                       ${{ steps.name.outputs.name }}:${{ steps.date.outputs.today }}
                       ${{ steps.name.outputs.name }}:latest
